# oncomatch-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cache/llm_results/: cache.db-shm  cache.db-wal
credentials/: .gitkeep
docs/: ARCHITECTURE.md  INDEX.md  METRICS_GUIDE.md  MODELS_SEPTEMBER_2025.md  PERFORMANCE_NOTES.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_SUMMARY_LATEST.md  SETUP.md  project_context.md
scripts/: demo_evaluation.py  demo_synthetic_evaluation.py  evaluate.py  run_demo.py  run_demo.sh  run_full_evaluation.py  test_judge_ensemble.py
src/: match.py
src/oncomatch/: __init__.py  biomcp_client.py  biomcp_wrapper.py  config.py  data_processor.py  llm_providers.py  llm_ranker.py  llm_registry.py  match.py  model_router.py  models.py  optimized_ranker.py  real_trial_fetcher.py  trial_analyzer.py  workflow_prioritizer.py
src/oncomatch/evaluation/: __init__.py  advanced_metrics.py  evaluator.py  judge_ensemble.py  metrics.py  research_evaluator.py  synthetic_patients.py
tests/: conftest.py  test_biomcp_client.py  test_evaluation.py  test_llm_json_contract.py  test_matching.py  test_model_router.py
